--- a/public/css/contador.css
+++ b/public/css/contador.css
@@ -1,109 +1,171 @@
-/* Resto del CSS... */
-
 .div-contador {
-    max-height: 40rem;
-    max-width: 40rem;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .img-nuve {
-    z-index: 0;
-    width: 100%; /* Ajusta según sea necesario */
-  }
-  
-  .img-fugas {
-    position: absolute;
-    z-index: 1;
-    max-height: 20rem;
-    max-width: 20rem;
-  }
-  
-  .img-star-der {
-    left: 0%;
-    transform: translateX(-50%);
-  }
-  
-  .img-star-izq {
-    left: 100%;
-    transform: translateX(-50%);
-  }
-  
-  .img-star-der-girl {
-    right: 100%;
-    transform: translateX(50%);
-  }
-  
-  .img-star-izq-girl {
-    right: 0%;
-    transform: translateX(50%);
-  }
-  
-  .contador-img {
-    z-index: 0;
-    display: flex;
-    flex-direction: column; /* Ajustado a columna para centrar elementos */
-    justify-content: center;
-    align-items: center;
-    position: relative; /* Necesario para posicionar los elementos internos */
+  max-height: 40rem;
+  max-width: 40rem;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.img-nuve {
+  z-index: 0;
+  width: 100%; /* Ajusta según sea necesario */
+}
+
+.img-fugas {
+  position: absolute;
+  z-index: 1;
+  max-height: 20rem;
+  max-width: 20rem;
+}
+
+.img-star-der {
+  left: 0%;
+  transform: translateX(-50%);
+}
+
+.img-star-izq {
+  left: 100%;
+  transform: translateX(-50%);
+}
+
+.img-star-der-girl {
+  right: 100%;
+  transform: translateX(50%);
+}
+
+.img-star-izq-girl {
+  right: 0%;
+  transform: translateX(50%);
+}
+
+.contador-img {
+  z-index: 0;
+  display: flex;
+  flex-direction: column; /* Ajustado a columna para centrar elementos */
+  justify-content: center;
+  align-items: center;
+  position: relative; /* Necesario para posicionar los elementos internos */
+  width: 100%;
+  height: 100%;
+}
+
+.contador-text {
+  margin: 0;
+  color: #fff;
+  z-index: 3;
+  font-family: "gotams-mediumUno";
+  font-size: 10vw; /* Ajustado a vw para ser responsivo */
+  position: absolute;
+}
+
+#contador-text-boy {
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+#contador-text-girl {
+  right: 50%;
+  transform: translateX(50%);
+}
+
+/* Resolución para dispositivos móviles muy pequeños */
+@media (max-width: 575px) {
+  .div-sub-container {
     width: 100%;
-    height: 100%;
+    height: auto;
   }
-  
-  .contador-text{
-    margin: 0;
-    color: #fff;
-    z-index: 3;
-    font-family: "gotams-mediumUno";
-    font-size: 10vw; /* Ajustado a vw para ser responsivo */
-    position: absolute;
+
+  .contador-text {
+    font-size: 20vw; /* Ajuste de tamaño en pantallas muy pequeñas */
   }
-  
   #contador-text-boy {
-    left: 50%;
-    bottom: -10%;
-    transform: translateX(-50%);
+    bottom: 0%;
   }
   
   #contador-text-girl {
-    right: 50%;
+    bottom: 0%;
+  }
+  .img-fugas {
+    max-height: 8rem;
+    max-width: 8rem;
+  }
+}
+
+/* Resolución para dispositivos móviles pequeños */
+@media (min-width: 576px) and (max-width: 767px) {
+  .div-sub-container {
+    width: 90%;
+    height: auto;
+  }
+
+  .contador-text {
+    font-size: 20vw; /* Ajuste de tamaño en pantallas pequeñas */
+  }
+  #contador-text-boy {
     bottom: -10%;
-    transform: translateX(50%);
   }
   
-  /* Media queries para ajustar en diferentes tamaños de pantalla */
-  @media (max-width: 768px) {
-    .div-sub-container {
-      width: 90%;
-      height: auto;
-    }
-  
-    .contador-text{
-      font-size: 20vw; /* Ajuste de tamaño en pantallas más pequeñas */
-    }
-  
-    .img-fugas {
-      max-height: 10rem;
-      max-width: 10rem;
-    }
+  #contador-text-girl {
+    bottom: -10%;
+  }
+  .img-fugas {
+    max-height: 10rem;
+    max-width: 10rem;
+  }
+}
+
+/* Resolución para tablets */
+@media (min-width: 768px) and (max-width: 991px) {
+  .div-sub-container {
+    width: 80%;
+    height: auto;
+  }
+
+  .contador-text {
+    font-size: 15vw; /* Ajuste de tamaño en tablets */
+  }
+  #contador-text-boy {
+    bottom: -10%;
   }
   
-  @media (max-width: 480px) {
-    .div-sub-container {
-      width: 100%;
-      height: auto;
-    }
-  
-    .contador-text{
-      font-size: 25vw; /* Ajuste de tamaño en pantallas más pequeñas */
-    }
-  
-    .img-fugas {
-      max-height: 8rem;
-      max-width: 8rem;
-    }
+  #contador-text-girl {
+    bottom: -10%;
+  }
+
+  .img-fugas {
+    max-height: 15rem;
+    max-width: 15rem;
+  }
+}
+
+/* Resolución para PC de escritorio */
+@media (min-width: 992px) {
+  .div-sub-container {
+    width: 70%;
+    height: auto;
+  }
+
+  .contador-text {
+    font-size: 8vw; /* Ajuste de tamaño en escritorio */
+  }
+
+  #contador-text-boy {
+    bottom: 1%;
   }
   
-  
+  #contador-text-girl {
+    bottom: 1%;
+  }
+
+  .img-fugas {
+    max-height: 20rem;
+    max-width: 20rem;
+  }
+}
+
+/* Estilos generales */
+.div-sub-container {
+  width: 100%;
+  height: auto;
+}
