--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,4 @@
+/* Estilos generales */
 @import url("./buttons.css");
 @import url("./images.css");
 @import url("./contador.css");
@@ -9,24 +10,26 @@
 }
 @font-face {
   font-family: "gotams-medium";
-  src: url(../assets/Tipografías/GOTHAM\ SSM/GothamSSm-Medium.otf)
-    format("truetype");
+  src: url(../assets/Tipografías/GOTHAM\ SSM/GothamSSm-Medium.otf) format("truetype");
 }
-
 @font-face {
   font-family: "gotams-mediumUno";
-  src: url(../assets/Tipografías/GOTHAM\ SSM/GothamSSm-MediumUno.otf)
-    format("truetype");
+  src: url(../assets/Tipografías/GOTHAM\ SSM/GothamSSm-MediumUno.otf) format("truetype");
 }
 
 html {
   margin: 0;
   box-sizing: border-box;
   font-size: 62.5%; /* 1rem = 10px */
-  /* scroll-behavior: smooth; */
+  width: 100%;
+  height: 100%;
 }
+
 body {
   margin: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden; /* Ocultar el scrollbar horizontal */
 }
 
 *,
@@ -34,6 +37,7 @@ body {
 *:after {
   box-sizing: inherit;
 }
+
 /* utilidades */
 .center-element {
   display: flex;
@@ -43,19 +47,17 @@ body {
 /* Generales */
 .container {
   position: relative;
-
   width: 100%;
   height: 100vh;
   background-image: url("../assets/Fondo/Fondo_video.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  /* gap: 1.5rem; */
+  overflow: hidden; /* Asegura que no haya overflow */
 }
 
 .container::before {
@@ -70,15 +72,14 @@ body {
 
 .div-title {
   background-image: url("../assets/images/marco001@4x.png");
-  background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
   height: auto;
 }
+
 .div-title h1 {
   text-align: center;
-  /* color: #B588D2; */
   color: #fff;
   font-size: 7rem;
   font-family: "babys-cursive", sans-serif;
@@ -95,10 +96,129 @@ body {
   border-radius: 1rem;
   width: 40%;
   height: 100%;
-
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
-/* https://uiverse.io/MuhammadHasann/great-fish-88 */
+/* Media Queries */
+
+/* Resolución para dispositivos móviles muy pequeños */
+@media (max-width: 575px) {
+  .container {
+    background-size: cover;
+  }
+  .div-sub-container{
+  justify-content: space-evenly;
+  }
+  .div-title{
+  background-size: 15rem;
+
+    bottom: 72%;
+    left: 53%;
+  }
+
+  .div-title h1 {
+    margin: 0;
+    font-size: 3rem;
+  }
+
+  .img-nuve{
+    width: 17rem;
+    height: 10rem;
+    
+  }
+  .img-fugas{
+    opacity: 0;
+  }
+  #typewriter-input {
+    font-size: 1.5rem;
+  }
+
+  #typewriter-input::placeholder {
+    font-size: 1.5rem;
+  }
+}
+
+/* Resolución para dispositivos móviles pequeños */
+@media (min-width: 576px) and (max-width: 767px) {
+  .container {
+    background-size: cover;
+  }
+  .div-sub-container{
+    justify-content: space-between;
+    }
+  .div-title {
+  background-size: contain;
+
+    bottom: 79%;
+    left: 53%;
+  }
+
+  .div-title h1 {
+    font-size: 4rem;
+  }
+
+  #typewriter-input {
+    font-size: 2rem;
+  }
+
+  #typewriter-input::placeholder {
+    font-size: 2rem;
+  }
+}
+
+/* Resolución para tablets */
+@media (min-width: 768px) and (max-width: 991px) {
+  .container {
+    background-size: cover;
+  }
+  .div-sub-container{
+    justify-content: space-between;
+    }
+  .div-title {
+  background-size: contain;
+
+    bottom: 79%;
+    left: 53%;
+  }
+
+  .div-title h1 {
+    font-size: 4rem;
+  }
+
+  #typewriter-input {
+    font-size: 2rem;
+  }
+
+  #typewriter-input::placeholder {
+    font-size: 2rem;
+  }
+}
+
+/* Resolución para PC de escritorio */
+@media (min-width: 972px) {
+  .container {
+    background-size: cover;
+  }
+  .div-sub-container{
+    justify-content: space-between;
+    }
+  .div-title {
+  background-size: contain;
+
+    bottom: 86%;
+    left: 53%;
+  }
+
+  .div-title h1 {
+    font-size: 6rem;
+  }
+
+  #typewriter-input {
+    font-size: 2.5rem;
+  }
+
+  #typewriter-input::placeholder {
+    font-size: 2.5rem;
+  }
+}
