--- a/public/html/register.css
+++ b/public/html/register.css
@@ -221,6 +221,12 @@
   #typewriter-input::placeholder {
     font-size: 1.5rem;
   }
+  .filled {
+    position: absolute;
+    opacity: 0;
+    top: 20px;
+    left: 22px;
+  }
 }
 
 /* Resolución para dispositivos móviles pequeños */
@@ -311,5 +317,12 @@
 
   #typewriter-input::placeholder {
     font-size: 2.5rem;
+  }
+
+  .filled {
+    position: absolute;
+    opacity: 0;  
+    top: 2rem;
+    left: 6rem;
   }
 }
